--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -29,6 +29,13 @@
   animation: fade-in 0.6s ease-out forwards;
 }
 
+@media (max-width: 768px) {
+  body {
+    overflow-x: hidden !important;
+  }
+}
+
+
 /* Popup fade-in animation */
 @keyframes fadeInPopup {
   from { 
